--- a/project_pw/templates/public/formruang.html
+++ b/project_pw/templates/public/formruang.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>eRuang - Sistem Peminjaman Ruangan Nurul Fikri</title>
+    <title>eRuang</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
@@ -8,7 +8,7 @@
     <div class="container mx-auto p-4">
         <!-- Header -->
         <div class="flex justify-between items-center border-b-2 pb-2 mb-4">
-            <div class="text-xl font-bold">eRuang- Sistem Peminjaman Ruangan Nurul Fikri</div>
+            <div class="text-xl font-bold">eRuang</div>
             <div class="flex items-center space-x-4">
                 <nav class="space-x-4">
                     <a href="#" class="text-blue-500">Home</a>
@@ -72,6 +72,9 @@
                         <label class="block mb-2">Kategori :</label>
                         <select class="border w-full p-2">
                             <option>Aula</option>
+                            <option>Ruang Meeting</option>
+                            <option>Ruang Konferensi</option>
+                            <option>Lab Komputer</option>
                         </select>
                     </div>
                     <div class="mb-4">
