--- a/project_pw/templates/admin/sidebar.html
+++ b/project_pw/templates/admin/sidebar.html
@@ -50,6 +50,14 @@
                         </p>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a href="dashboard" class="nav-link">
+                        <i class="nav-icon far fa-image"></i>
+                        <p>
+                            dashboard
+                        </p>
+                    </a>
+                </li>
             </ul>
         </nav>
         <!-- /.sidebar-menu -->
